Change background color

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ twitter:            samuelpordeus
 facebook:           samuelpordeus
 github-url:         samuelpordeus
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+linkedin:          samuelpordeus
 #xing:              username
 instagram:          samuelspordeus
 #lastfm:            username
